@@ -248,6 +248,11 @@ int EvseRapiProcessor::processCmd()
 	rc = 0;
       }
       break;
+    case '1': // simulate front panel short press
+      g_BtnHandler.DoShortPress(g_EvseController.InFaultState());
+      g_OBD.Update(OBD_UPD_FORCE);
+      rc = 0;
+      break;
 #ifdef LCD16X2
     case 'B': // LCD backlight
       if (tokenCnt == 2) {
