@@ -1,5 +1,8 @@
 Change Log
 
+20180518
+- implement $F1 RAPI command to simulate front panel short press
+
 20180417 SCL
 - fix compile errors when no GFI and ADVPWR. Must also undef UL_COMPLIANT,
 	GFI_SELFTEST, AUTOSVCLEVEL
